Resolve warnings and format codes