@@ -32,75 +32,61 @@ import java.sql.*;
  * @include /etc/license.txt
  */
 
-public class JDBCTest
-{
-	static String[] data =
-	{	"(1,  'John',   'Mon', 1, 'JustJoe')",
-		"(2,  'JS',     'Mon', 1, 'Cappuccino')",
-		"(3,  'Marie',  'Mon', 2, 'CaffeMocha')",
-	};
+public class JDBCTest {
+	static String[] data = { "(1,  'John',   'Mon', 1, 'JustJoe')", "(2,  'JS',     'Mon', 1, 'Cappuccino')",
+			"(3,  'Marie',  'Mon', 2, 'CaffeMocha')", };
 
-	public static void main(String[] args) throws Exception
-	{
-		Class.forName( "com.holub.database.jdbc.JDBCDriver" ) //{=JDBCTest.forName}
-												.newInstance();
+	public static void main(String[] args) throws Exception {
+		// {=JDBCTest.forName}
+		Class.forName("com.holub.database.jdbc.JDBCDriver").getDeclaredConstructor().newInstance();
 
 		Connection connection = null;
-		Statement  statement  = null;
-		try
-		{	connection = DriverManager.getConnection(			//{=JDBCTest.getConnection}
-							"file:/c:/src/com/holub/database/jdbc/Dbase",
-							"harpo", "swordfish" );
+		Statement statement = null;
+		try {
+			// {=JDBCTest.getConnection}
+			connection = DriverManager.getConnection("file:/c:/src/com/holub/database/jdbc/Dbase", "harpo",
+					"swordfish");
 
 			statement = connection.createStatement();
-		
-			statement.executeUpdate(
-				"create table test (" +
-				 "  Entry      INTEGER      NOT NULL"   +
-				 ", Customer   VARCHAR (20) NOT NULL"   +
-				 ", DOW        VARCHAR (3)  NOT NULL"   +
-				 ", Cups       INTEGER      NOT NULL"   +
-				 ", Type       VARCHAR (10) NOT NULL"   +
-				 ", PRIMARY KEY( Entry )"               +
-				 ")"
-			);
 
-			for( int i = 0; i < data.length; ++i )
-				statement.executeUpdate( 
-						"insert into test VALUES "+ data[i] );
+			statement.executeUpdate(
+					"create table test (" + "  Entry      INTEGER      NOT NULL" + ", Customer   VARCHAR (20) NOT NULL"
+							+ ", DOW        VARCHAR (3)  NOT NULL" + ", Cups       INTEGER      NOT NULL"
+							+ ", Type       VARCHAR (10) NOT NULL" + ", PRIMARY KEY( Entry )" + ")");
+
+			for (int i = 0; i < data.length; ++i)
+				statement.executeUpdate("insert into test VALUES " + data[i]);
 
 			// Test Autocommit stuff. If everything's working
 			// correctly, there James should be in the databse,
 			// but Fred should not.
 
-			connection.setAutoCommit( false );
-			statement.executeUpdate( 
-						"insert into test VALUES "+
-						"(4, 'James',  'Thu', 1, 'Cappuccino')" );
+			connection.setAutoCommit(false);
+			statement.executeUpdate("insert into test VALUES " + "(4, 'James',  'Thu', 1, 'Cappuccino')");
 			connection.commit();
 
-			statement.executeUpdate(
-						"insert into test (Customer) VALUES('Fred')");
+			statement.executeUpdate("insert into test (Customer) VALUES('Fred')");
 			connection.rollback();
-			connection.setAutoCommit( true );
+			connection.setAutoCommit(true);
 
 			// Print everything.
 
-			ResultSet result = statement.executeQuery( "select * from test" );
-			while( result.next() )
-			{	System.out.println
-				(	  result.getInt("Entry")		+ ", "
-					+ result.getString("Customer")	+ ", "
-					+ result.getString("DOW")		+ ", "
-					+ result.getInt("Cups")			+ ", "
-					+ result.getString("Type")
-				);
+			ResultSet result = statement.executeQuery("select * from test");
+			while (result.next()) {
+				System.out.println(result.getInt("Entry") + ", " + result.getString("Customer") + ", "
+						+ result.getString("DOW") + ", " + result.getInt("Cups") + ", " + result.getString("Type"));
 			}
-		}
-		finally
-		{
-		  try{ if(statement != null) statement.close(); }catch(Exception e){}
-		  try{ if(connection!= null) connection.close();}catch(Exception e){}
+		} finally {
+			try {
+				if (statement != null)
+					statement.close();
+			} catch (Exception e) {
+			}
+			try {
+				if (connection != null)
+					connection.close();
+			} catch (Exception e) {
+			}
 		}
 	}
 }
